--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
         <!-- Parte izquierda -->
         <div class="left">
             <i class="fa-solid fa-magnifying-glass"></i>
-
+        </div> 
 
 </body>
 
