--- a/index.html
+++ b/index.html
@@ -1,21 +1,59 @@
-<!DOCTYPE html>
-<html lang="en">
+<!doctype html>
+<html lang="es">
+  <head>
+    <meta charset="UTF-8" />
+    <title>Clon estilo Nintendo</title>
+    <link rel="stylesheet" href="./css/style.css" />
+  </head>
+  <body>
+    <!-- TOP BAR -->
+    <div class="topbar">
+      <!-- LOGO -->
 
-<head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
-    <link rel="stylesheet" href="./css/style.css">
-</head>
+      <div class="top-actions">
+        <div class="action">
+          <i class="fa-solid fa-magnifying-glass"></i>
+          Buscar
+        </div>
+        <div class="action">
+          <i class="fa-regular fa-heart"></i>
+          Lista deseos
+        </div>
+        <div class="action">
+          <i class="fa-solid fa-user"></i>
+          Gabi
+        </div>
+      </div>
+    </div>
 
-<body>
+    <!-- SIDEBAR -->
+    <div class="sidebar">
+      <div class="side-item"><i class="fa-solid fa-star"></i><span>Juegos</span></div>
+      <div class="side-item"><i class="fa-solid fa-gamepad"></i><span>Hardware</span></div>
+      <div class="side-item"><i class="fa-solid fa-joystick"></i><span>Switch Online</span></div>
+      <div class="side-item"><i class="fa-solid fa-shopping-cart"></i><span>eShop</span></div>
+      <div class="side-item"><i class="fa-solid fa-cloud"></i><span>My Nintendo</span></div>
+      <div class="side-item"><i class="fa-solid fa-users"></i><span>Síguenos</span></div>
+      <div class="side-item">⋯</div>
+    </div>
 
-    <header class="navbar">
-        <!-- Parte izquierda -->
-        <div class="left">
-            <i class="fa-solid fa-magnifying-glass"></i>
+    <!-- MAIN -->
+    <div class="main">
+      <!-- Carrusel -->
+      <div class="carousel">
+        <div class="slide"></div>
+        <div class="arrow left">‹</div>
+        <div class="arrow right">›</div>
+      </div>
 
-
-</body>
-
+      <!-- Novedades -->
+      <div class="section">
+        <h2>Novedades</h2>
+        <div class="tabs">
+          <div class="tab active">Destacadas</div>
+          <div class="tab">Noticias</div>
+        </div>
+      </div>
+    </div>
+  </body>
 </html>
